# WinCamStreamIOS

./: README.md  project.yml
.github/workflows/: WinLLPlay-build.yml  ios-build.yml
App/: Info.plist  LaunchScreen.storyboard  Streamer.swift  StreamerView.swift  WinCamStreamIOSApp.swift  streamer.swift
Core/: H264Packer.swift  Streamer.swift  Types.swift  WinCamStreamIOSApp.swift
Win/WinLLPlay/.github/workflows/: windows-build.yml
Win/WinLLPlay/FFMPEG/include/libavutil/: ffversion.h
Win/WinLLPlay/FFMPEG/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
Win/WinLLPlay/src/: CMakeLists.txt  main.cpp  main.cpp.bak
